tests-system/array-membership-2/output
ival in arr, warning "potato"
^^^^ array-membership-2/foo.rsl:9: error: expected expression of type Builtin_String, got Builtin_Integer instead
Processed 1 model, 0 checks and 0 requirement files and found 1 error
